Issue #270: fix editor page overflow x

--- a/src/global.scss
+++ b/src/global.scss
@@ -548,3 +548,7 @@ g.selected {
     height: 100%;
   }
 }
+
+.editor-container {
+  overflow-x: hidden;
+}
